Create tmp file for recording